# Anti-Censorship-Research

./: AGENTS.md  README.md  test_doc.md
DOC/: .telemt_architecture.md.kate-swp  telemt_architecture.md  xray-hy2-entry.jsonc  xray-hy2-exit.jsonc  xray-hy2.jsonc  xray-vtt-entry.jsonc  xray-vtt-exit.jsonc  xray-vtt.jsonc
generated_docs/: xray-geoip-razbor.md
pre-reports/: AGENTS.md
projects/: projects.toml  update.py
projects/TrustTunnel/TrustTunnel/: CONFIGURATION.md  DEEP_LINK.md  Dockerfile.prebuilt  README.md
projects/TrustTunnel/TrustTunnel/bamboo-specs/: deploy-docker.yaml
projects/TrustTunnel/TrustTunnel/deeplink/src/: decode.rs  error.rs  types.rs
projects/TrustTunnel/TrustTunnel/deeplink/tests/: proptest.rs  roundtrip.rs
projects/TrustTunnel/TrustTunnel/endpoint/: Cargo.toml
projects/TrustTunnel/TrustTunnel/lib/src/: quic_multiplexer.rs
projects/TrustTunnel/TrustTunnel/lib/tests/: reverse_proxy.rs
projects/TrustTunnel/TrustTunnelClient/: .clang-tidy  .markdownlintignore  CHANGELOG.md  DEVELOPMENT.md  README.md  VERIFY_RELEASES.md  conandata.yml
projects/TrustTunnel/TrustTunnelClient/.devcontainer/: Dockerfile
projects/TrustTunnel/TrustTunnelClient/.github/workflows/: bench.yml
projects/TrustTunnel/TrustTunnelClient/bamboo-specs/: increment-version.yaml  lint.yaml
projects/TrustTunnel/TrustTunnelClient/common/src/: event_loop.cpp  fsm.cpp
projects/TrustTunnel/TrustTunnelClient/common/test/: test_event_loop.cpp
projects/TrustTunnel/TrustTunnelClient/core/src/: direct_upstream.cpp  direct_upstream.h  domain_filter.cpp  fake_upstream.cpp  fake_upstream.h  fallbackable_upstream_connector.cpp  http3_upstream.h  http_icmp_multiplexer.cpp  http_icmp_multiplexer.h  http_udp_multiplexer.cpp  http_udp_multiplexer.h  memory_buffer.cpp  single_upstream_connector.h  socks_listener.cpp  tun_device_listener.cpp  tun_device_listener.h  vpn_client.cpp  vpn_manager.cpp  vpn_manager.h
projects/TrustTunnel/TrustTunnelClient/core/test/: mock_dns_server.cpp  mock_dns_server.h  test_dns_routing.cpp  test_domain_filter.cpp  test_fallbackable_upstream_connector.cpp  test_http_udp_multiplexer.cpp  test_mock_vpn_client.cpp  test_tunnel.cpp  test_vpn_client_fsm.cpp  test_vpn_dns_resolver.cpp
projects/TrustTunnel/TrustTunnelClient/fastlane/: .env.default  Matchfile  README.md
projects/TrustTunnel/TrustTunnelClient/integration-tests/: README.md  docker_build.sh
projects/TrustTunnel/TrustTunnelClient/scripts/: conan_export.py
projects/TrustTunnel/TrustTunnelClient/tcpip/: CMakeLists.txt
projects/TrustTunnel/TrustTunnelClient/tcpip/include/tcpip/: tcpip.h
projects/TrustTunnel/TrustTunnelClient/tcpip/src/: icmp_request_manager.cpp  libevent_lwip.h  lwipopts.h  tcp_conn_manager.cpp  tcp_conn_manager.h  tcp_raw.cpp  tcpip_common.cpp  tcpip_common.h  tcpip_util.h  udp_connection.h
projects/TrustTunnel/TrustTunnelClient/tcpip/test/: test_vpn_packet_pool.cpp
projects/TrustTunnel/TrustTunnelClient/trusttunnel/: README.md  trusttunnel_client.rc
projects/TrustTunnel/TrustTunnelFlutterClient/: .gitignore
projects/TrustTunnel/TrustTunnelFlutterClient/android/: .gitignore  settings.gradle
projects/TrustTunnel/TrustTunnelFlutterClient/linux/: CMakeLists.txt
projects/antiDPI/dpibreak/: .gitignore  .gitmodules  CHANGELOG  RELEASE_NOTE.md  WINDOWS_GUIDE.txt  build.ps1  dpibreak.1.md  install.sh
projects/antiDPI/dpibreak/.cargo/: config.toml
projects/antiDPI/dpibreak/pkg/: README.md
projects/antiDPI/dpibreak/scripts/: add-header.sh  sign.sh  test-url
projects/antiDPI/dpibreak/src/: log.rs  opt.rs  tls.rs
projects/antiDPI/dpibreak/src/pkt/: fake.rs  (+1 more)
projects/telegram/telemt/: README.md
reports/: report-2026-04-20_2026-04-27.md  report-2026-04-27.md  report_2026-04-01_2026-04-04.md  report_2026-04-27_2026-04-30.md  report_2026-04-29.md  report_2026-05-01_to_2026-05-03.html  report_2026-05-01_to_2026-05-03.md
templates/: pre-report.md
test_doc/: mtproxy_interaction_modes_ru.md  report-2026-04-27.md  telemt_interaction_modes_ru.md  telemt_protocol_faq.md  upstreams_2026_review.md
upstreams/: projects.toml  update.py
upstreams/TrustTunnel/TrustTunnel/: AGENTS.md  CHANGELOG.md
upstreams/TrustTunnel/TrustTunnel/bamboo-specs/: bamboo.yaml
upstreams/TrustTunnel/TrustTunnel/scripts/: config_to_deeplink.py  deeplink_to_config.py  install.sh
upstreams/TrustTunnel/TrustTunnelClient/: conandata.yml
upstreams/TrustTunnel/TrustTunnelClient/bamboo-specs/: run-browser-integration-test.yaml  run-integration-test.yaml  run-tests.yaml  upload-conan-recipes.yaml
upstreams/TrustTunnel/TrustTunnelClient/fastlane/: Fastfile  Subroutings
upstreams/TrustTunnel/TrustTunnelClient/platform/: README.md
upstreams/TrustTunnel/TrustTunnelClient/scripts/: increment_version.sh
upstreams/TrustTunnel/TrustTunnelFlutterClient/: flutter_native_splash.yaml
upstreams/TrustTunnel/TrustTunnelFlutterClient/android/: template.libs.gradle
upstreams/TrustTunnel/TrustTunnelFlutterClient/bamboo-specs/: plan-building-to-deploy.yaml
upstreams/TrustTunnel/TrustTunnelFlutterClient/test/: widget_test.dart
upstreams/Xray-core/: log.txt
upstreams/antiDPI/dpibreak/: Cargo.toml  Makefile  README.md  build.rs  dpibreak.1.in
upstreams/antiDPI/dpibreak/.github/workflows/: release.yml
upstreams/antiDPI/dpibreak/.hooks/: pre-commit
upstreams/antiDPI/dpibreak/benches/: hoptab_bench.rs
upstreams/antiDPI/dpibreak/pkg/aur/: Dockerfile
upstreams/antiDPI/dpibreak/res/windows_bats/: service_remove.bat
upstreams/antiDPI/dpibreak/src/: main.rs  pkt.rs  platform.rs
upstreams/antiDPI/dpibreak/src/platform/: linux.rs  windows.rs
upstreams/antiDPI/dpibreak/src/platform/linux/: nftables.rs  rxring.rs
xray-configs/: db.sql  gen-sub.py
(+316 files in other folders)
