# Copyright 2025-2026 Dillution <hskimse1@gmail.com>.
#
# This file is part of DPIBreak.
#
# DPIBreak is free software: you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published by the
# Free Software Foundation, either version 3 of the License, or (at your
# option) any later version.
#
# DPIBreak is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
# FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License
# for more details.
#
# You should have received a copy of the GNU General Public License
# along with DPIBreak. If not, see <https://www.gnu.org/licenses/>.

[package]
name = "dpibreak"
version = "0.6.1"
authors = ["Dilluti0n <hskimse1@gmail.com>"]
edition = "2024"
rust-version = "1.88"
build = "build.rs"
license = "GPL-3.0-or-later"
description = "fast and easy-to-use DPI circumvention tool in Rust."
repository = "https://github.com/dilluti0n/dpibreak.git"
homepage = "https://github.com/dilluti0n/dpibreak"
readme = "README.md"


[dependencies]
anyhow = "1"
etherparse = "0.18"

[target.'cfg(target_os = "linux")'.dependencies]
nfq = { package = "nfq-updated", version = "0.2.6" } # nfq-updated: to use as_raw_fd
socket2 = { version = "0.6", features = ["all"] }
nix = { version = "0.27.1", features = ["fs", "user"] }
daemonize = "0.5.0"
libc = "0.2"
ctrlc = { version = "3.4", features = ["termination"] }

[target.'cfg(windows)'.dependencies]
windivert = { version = "0.6.0" }
windows-services = "0.26"

[build-dependencies]
winres = "0.1"

# preprocess dpibreak.1.in
# chrono = { version = "0.4", features = ["clock"] }

[profile.release]
lto = true
panic = "abort"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[features]
bench = []

[[bench]]
name = "hoptab_bench"
harness = false
required-features = ["bench"]
